Update chat event handling for Folia API compatibility
Replaced deprecated Bukkit chat events with Folia's AsyncChatEvent and updated related logic in PublicChat and Whispers classes. Adjusted message processing to use Adventure components and serializers. Updated config to map BOLD formatting to '**'. Cleaned up deprecated and unused code for improved maintainability.

--- a/pom.xml
+++ b/pom.xml
@@ -115,8 +115,7 @@
     </repositories>
 
     <dependencies>
-        <!--This adds the Spigot API artifact to the build -->
-        <!-- folia api -->
+        <!-- Folia API (includes Paper API) -->
         <dependency>
             <groupId>dev.folia</groupId>
             <artifactId>folia-api</artifactId>
@@ -127,7 +126,6 @@
             <groupId>org.bstats</groupId>
             <artifactId>bstats-bukkit</artifactId>
             <version>3.1.0</version>
-            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.ibm.icu</groupId>
